--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,59 @@ services:
     volumes:
       - user_db_data:/var/lib/postgresql/data
 
+  product-service:
+      build: ./product-service
+      container_name: product-service
+      ports:
+        - "8082:8082"
+      environment:
+        SPRING_PROFILES_ACTIVE: docker
+        DB_HOST: products-db
+        DB_PORT: 5432
+        DB_USER: product
+        DB_PASS: password
+      depends_on:
+        - product-db
+
+  product-db:
+      image: postgres:16
+      container_name: product-db
+      environment:
+        POSTGRES_USER: product
+        POSTGRES_PASSWORD: password
+        POSTGRES_DB: products_db
+      ports:
+        - "5434:5432"
+      volumes:
+        - product_db_data:/var/lib/postgresql/data
+
+  cart-service:
+      build: ./cart-service
+      container_name: cart-service
+      ports:
+        - "8083:8083"
+      environment:
+        SPRING_PROFILES_ACTIVE: docker
+        DB_HOST: cart-db
+        DB_PORT: 5432
+        DB_USER: cart
+        DB_PASS: password
+      depends_on:
+        - cart-db
+
+  cart-db:
+      image: postgres:16
+      container_name: carts_db
+      environment:
+        POSTGRES_USER: cart
+        POSTGRES_PASSWORD: password
+        POSTGRES_DB: carts_db
+      ports:
+        - "5435:5432"
+      volumes:
+        - cart_db_data:/var/lib/postgresql/data
+
 volumes:
   user_db_data:
+  product_db_data:
+  cart_db_data:
