--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,6 +103,32 @@ services:
       - "5436:5432"
     volumes:
       - order_db_data:/var/lib/postgresql/data
+      -
+  payment-service:
+    build: ./payment-service
+    container_name: payment-service
+    ports:
+      - "8085:8085"
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+      DB_HOST: payment-db
+      DB_PORT: 5432
+      DB_USER: payment
+      DB_PASS: password
+    depends_on:
+      - payment-db
+
+  payment-db:
+    image: postgres:16
+    container_name: payment-db
+    environment:
+      POSTGRES_USER: payment
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: payments_db
+    ports:
+      - "5437:5432"
+    volumes:
+      - payment_db_data:/var/lib/postgresql/data
 
 volumes:
   user_db_data:
