--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://payment-db:5432/payments_db
 spring.datasource.username=payment
 spring.datasource.password=password
+STRIPE_SK=
+stripe.webhook.secret=
