--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -190,6 +190,24 @@ services:
     volumes:
       - notification_db_data:/var/lib/postgresql/data
 
+  eureka:
+    build: ./eureka
+    container_name: eureka
+    ports:
+      - "8761:8761"
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+  api-gateway:
+    build: ./api-gateway
+    container_name: api-gateway
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+    depends_on:
+      - eureka
+
+
 volumes:
   user_db_data:
   product_db_data:
