--- a/api-gateway/src/main/resources/application.yaml
+++ b/api-gateway/src/main/resources/application.yaml
@@ -29,6 +29,6 @@ server:
 eureka:
     client:
       service-url:
-            defaultZone: http://eureka-server:8761/eureka/
+            defaultZone: http://eureka:8761/eureka/
       register-with-eureka: true
       fetch-registry: true
