--- a/cart-service/src/main/resources/application.properties
+++ b/cart-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=cart_service
+spring.application.name=cart-service
 services.product.url=http://localhost:8082
 server.port=8083
 spring.jpa.hibernate.ddl-auto=update
@@ -8,6 +8,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://cart-db:5432/carts_db
 spring.datasource.username=cart
 spring.datasource.password=password
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
