--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -8,6 +8,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://user-db:5432/users_db
 spring.datasource.username=user
 spring.datasource.password=password
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://eureka:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
