--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=user-service
 server.port=8081
-api.security.token.secret = ${JWT_SECRET:my-secret-key}
+api.security.token.secret = ${JWT_SECRET:39616e41306663523363363346526134}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
