--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -10,3 +10,8 @@ spring.datasource.password=password
 eureka.client.service-url.defaultZone=http://eureka:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+management.endpoints.web.exposure.include=health, prometheus
+management.endpoints.access.default=none
+management.endpoint.health.enabled=true
+management.endpoint.health.show-details=always
+management.endpoint.prometheus.enabled=true
