--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -91,6 +91,17 @@
 			<version>5.0.1</version>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<!-- Source: https://mvnrepository.com/artifact/io.micrometer/micrometer-registry-prometheus -->
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-registry-prometheus</artifactId>
+			<version>1.16.3</version>
+			<scope>compile</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
