--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=user-service
 server.port=8081
-api.security.token.secret = ${JWT_SECRET:39616e41306663523363363346526134}
+api.security.token.secret=${JWT_SECRET:defaultsecret}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://user-db:5432/users_db
-spring.datasource.username=user
-spring.datasource.password=password
-eureka.client.service-url.defaultZone=http://eureka:8761/eureka/
+spring.datasource.url=jdbc:postgresql://${USER_DB_HOST:localhost}:${USER_DB_PORT:5432}/${USER_DB_NAME:users_db}
+spring.datasource.username=${USER_DB_USER:user}
+spring.datasource.password=${USER_DB_PASSWORD:password}
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 management.endpoints.web.exposure.include=health, prometheus
