--- a/cart-service/src/main/resources/application.properties
+++ b/cart-service/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=cart-service
-services.product.url=http://localhost:8082
+services.product.url=${PRODUCT_SERVICE_URL:http://localhost:8082}
 server.port=8083
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://cart-db:5432/carts_db
-spring.datasource.username=cart
-spring.datasource.password=password
-eureka.client.service-url.defaultZone=http://eureka:8761/eureka/
+spring.datasource.url=jdbc:postgresql://${CART_DB_HOST:localhost}:${CART_DB_PORT:5432}/${CART_DB_NAME:carts_db}
+spring.datasource.username=${CART_DB_USER:cart}
+spring.datasource.password=${CART_DB_PASSWORD:password}
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 management.endpoints.web.exposure.include=health, prometheus
