--- a/notification-service/src/main/resources/application.properties
+++ b/notification-service/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://notification-db:5432/notifications_db
-spring.datasource.username=notification
-spring.datasource.password=password
-eureka.client.service-url.defaultZone=http://eureka:8761/eureka/
+spring.datasource.url=jdbc:postgresql://${NOTIFICATION_DB_HOST:localhost}:${NOTIFICATION_DB_PORT:5432}/${NOTIFICATION_DB_NAME:notifications_db}
+spring.datasource.username=${NOTIFICATION_DB_USER:notification}
+spring.datasource.password=${NOTIFICATION_DB_PASSWORD:password}
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 management.endpoints.web.exposure.include=health, prometheus
@@ -15,3 +15,4 @@ management.endpoints.access.default=none
 management.endpoint.health.enabled=true
 management.endpoint.health.show-details=always
 management.endpoint.prometheus.enabled=true
+sendgrid.api.key=${SENDGRID_API_KEY:your_sendgrid_key}
