--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://order-db:5432/orders_db
-spring.datasource.username=order
-spring.datasource.password=password
-eureka.client.service-url.defaultZone=http://eureka:8761/eureka/
+spring.datasource.url=jdbc:postgresql://${ORDER_DB_HOST:localhost}:${ORDER_DB_PORT:5432}/${ORDER_DB_NAME:orders_db}
+spring.datasource.username=${ORDER_DB_USER:order}
+spring.datasource.password=${ORDER_DB_PASSWORD:password}
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 management.endpoints.web.exposure.include=health, prometheus
