--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://payment-db:5432/payments_db
-spring.datasource.username=payment
-spring.datasource.password=password
-eureka.client.service-url.defaultZone=http://eureka:8761/eureka/
+spring.datasource.url=jdbc:postgresql://${PAYMENT_DB_HOST:localhost}:${PAYMENT_DB_PORT:5432}/${PAYMENT_DB_NAME:payments_db}
+spring.datasource.username=${PAYMENT_DB_USER:payment}
+spring.datasource.password=${PAYMENT_DB_PASSWORD:password}
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 management.endpoints.web.exposure.include=health, prometheus
@@ -15,3 +15,5 @@ management.endpoints.access.default=none
 management.endpoint.health.enabled=true
 management.endpoint.health.show-details=always
 management.endpoint.prometheus.enabled=true
+STRIPE_SK=${STRIPE_SK:your_stripe_key}
+stripe.webhook.secret=${STRIPE_WEBHOOK_SECRET:your_webhook_secret}
