--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -4,10 +4,10 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://product-db:5432/products_db
-spring.datasource.username=product
-spring.datasource.password=password
-eureka.client.service-url.defaultZone=http://eureka:8761/eureka/
+spring.datasource.url=jdbc:postgresql://${PRODUCT_DB_HOST:localhost}:${PRODUCT_DB_PORT:5432}/${PRODUCT_DB_NAME:products_db}
+spring.datasource.username=${PRODUCT_DB_USER:product}
+spring.datasource.password=${PRODUCT_DB_PASSWORD:password}
+eureka.client.service-url.defaultZone=${EUREKA_URL:http://localhost:8761/eureka/}
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 management.endpoints.web.exposure.include=health, prometheus
